package com.github.lette1394.solid.X_6_SOLID_ISP_1;

import java.io.File;

public interface FileLocator {
  File getFile(long id);
}
