package com.github.lette1394.solid.X_6_SOLID_ISP_1.log;

public class AccessLogger {
}
